--- a/index.html
+++ b/index.html
@@ -1,29 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de IMC</title>
+    <title>Calculadora de IMC para Mujeres</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
-
 <body>
     <div class="container">
-        <h1>Calcula tu IMC</h1>
-        <form id="form">
-            <label for="peso">Peso (kg):</label>
-            <input type="number" id="peso" name="peso" required>
+        <header>
+            <h1><i class="fas fa-female"></i> Calculadora de IMC para Mujeres</h1>
+        </header>
+        
+        <main>
+            <section id="calculator">
+                <form id="imc-form">
+                    <div class="input-group">
+                        <label for="peso">Peso:</label>
+                        <input type="number" id="peso" required min="1" step="0.1">
+                        <select id="peso-unidad">
+                            <option value="kg">kg</option>
+                            <option value="lb">lb</option>
+                        </select>
+                    </div>
+                    <div class="input-group">
+                        <label for="altura">Altura:</label>
+                        <input type="number" id="altura" required min="1" step="0.1">
+                        <select id="altura-unidad">
+                            <option value="cm">cm</option>
+                            <option value="in">in</option>
+                        </select>
+                    </div>
+                    <div class="input-group">
+                        <label for="edad">Edad:</label>
+                        <input type="number" id="edad" required min="1" max="120">
+                    </div>
+                    <div class="input-group">
+                        <label for="etapa-vida">Etapa de vida:</label>
+                        <select id="etapa-vida">
+                            <option value="adulta">Adulta</option>
+                            <option value="embarazada">Embarazada</option>
+                            <option value="postparto">Postparto</option>
+                            <option value="menopausia">Menopausia</option>
+                        </select>
+                    </div>
+                    <button type="submit">Calcular IMC</button>
+                </form>
+            </section>
 
-            <label for="altura">Altura (cm):</label>
-            <input type="number" id="altura" name="altura" required>
+            <section id="resultado" class="hidden">
+                <h2>Tu Resultado</h2>
+                <div id="imc-valor"></div>
+                <div id="imc-categoria"></div>
+                <div id="imc-mensaje"></div>
+                <div id="imc-grafico"></div>
+            </section>
 
-            <button type="submit">Calcular</button>
-        </form>
+            <section id="consejos" class="hidden">
+                <h2>Consejos personalizados</h2>
+                <div id="consejos-contenido"></div>
+            </section>
 
-        <div id="resultado"></div>
+            <section id="historial" class="hidden">
+                <h2>Tu Progreso</h2>
+                <canvas id="historial-grafico"></canvas>
+            </section>
+        </main>
+
+        <aside id="info">
+            <h2>IMC y Salud Femenina</h2>
+            <p>El Índice de Masa Corporal (IMC) es una herramienta útil para evaluar tu peso en relación con tu altura. Sin embargo, para las mujeres, es importante considerar factores adicionales como la etapa de vida, la composición corporal y los cambios hormonales.</p>
+            <h3>Categorías de IMC:</h3>
+            <ul>
+                <li>Bajo peso: &lt; 18.5</li>
+                <li>Peso normal: 18.5 - 24.9</li>
+                <li>Sobrepeso: 25.0 - 29.9</li>
+                <li>Obesidad: ≥ 30.0</li>
+            </ul>
+            <p><strong>Nota:</strong> El IMC es solo un indicador. Para una evaluación completa de tu salud, consulta a un profesional médico.</p>
+        </aside>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="index.js"></script>
 </body>
-
 </html>
